--- a/wp-content/themes/scroller/style.css
+++ b/wp-content/themes/scroller/style.css
@@ -228,9 +228,7 @@ h4.leading{
 
 #header img{ float:left; margin:0; width: 200px;}
 
-.bigmenu h1{ margin:17px 0 !important;}
 
-.bigmenu h1 img{height:34px !important;}
 
 .bigmenu .scroll,
 .bigmenu .navi{padding:18px 0 20px 0;right: 0;}
@@ -254,9 +252,9 @@ a#logo_res{ display:none; margin:10px auto; width:90%;}
 ********************************************************************************************
 ********************************************************************************************/
 
-#navigation{ width:100%; position:relative; z-index:99; height:50px;}
+#navigation{ width:100%; position:relative; z-index:99; height:50px; padding-top: 20px;}
 
-#navigation h1{ position:absolute; top:0; left:0;  height: 60px;}
+#navigation h1{ position:absolute; top:0; left:-180px;  height: 60px;}
 
 ul.scroll,
 ul.navi{list-style: none; position: relative; float: right; display: block; right: 50%; margin:0 !important; overflow:visible;
@@ -275,19 +273,7 @@ ul.navi li{position: relative; float: left; display: block; left: 50%;
     transition: all 1.1s ease;
 }
 
-ul.nav_classic{right: 0;
 
-	-webkit-transition: all 1.1s ease;
-    -moz-transition: all 1.1s ease;
-    -o-transition: all 1.1s ease;
-    transition: all 1.1s ease;}
-
-ul.nav_classic li{left: 0;
-	-webkit-transition: all 1.1s ease;
-    -moz-transition: all 1.1s ease;
-    -o-transition: all 1.1s ease;
-    transition: all 1.1s ease;
-}
 
 .scroll .current a {
 }
@@ -406,6 +392,8 @@ background-image: url(images/icons/minus.png);
 ********************************************************************************************
 ********************************************************************************************/
 #main{ overflow:hidden; position:relative; z-index:2 !important;}
+
+#main, #home{ max-width:1024px; margin:0 auto;}
 
 .section,
 .section_template{ overflow:hidden; padding:0 0; position:relative; z-index:2; background-attachment:fixed; background-position:50% 0; background-repeat:no-repeat;}
