--- a/wp-content/themes/scroller/style.css
+++ b/wp-content/themes/scroller/style.css
@@ -406,7 +406,7 @@ background-image: url(images/icons/minus.png);
 
 .section_template .container{ overflow:hidden; padding:155px 2% 75px 2%;}
 
-#contact .container{padding:80px 2% 20px 2%;}
+#contact .container{padding:0 20px 2%;}
 
 .section>iframe{ float:left; margin:0; padding:0; width:100%;}
 
