--- a/wp-content/themes/scroller/style.css
+++ b/wp-content/themes/scroller/style.css
@@ -402,7 +402,7 @@ background-image: url(images/icons/minus.png);
 
 .section_template{ background-color:#333;}
 
-.section .container{ overflow:hidden; padding:30px 4% 30px 4%;}
+.section .container{ overflow:hidden; padding:30px 4% 30px 4%; max-width:942px}
 
 .section_template .container{ overflow:hidden; padding:155px 2% 75px 2%;}
 
@@ -1830,7 +1830,7 @@ html[xmlns] .slides {display: block;}
 ********************************************************************************************
 ********************************************************************************************/
 
-.loop{ overflow:hidden; width:105%;}
+.loop{ overflow:hidden; width:100%;}
 	
 .item_full{
 	overflow:hidden;
