Cambio flecha up

--- a/wp-content/themes/scroller/style-custom.css
+++ b/wp-content/themes/scroller/style-custom.css
@@ -480,6 +480,9 @@ font-size: 1.9em;
 
 #contact .section_text a:hover{color:#fff}
 
+
+
+
 /*------------------------------------------------------------*/
 /*------------------------------------------------------------*/
 /*------------------------------------------------------------*/
@@ -560,7 +563,7 @@ font-size: 1.9em;
 		max-width: 230px;
 		overflow: hidden;
 	}
-	
+	#dynamic-to-top{ width:20px !important;}
 }
 
 
