--- a/wp-content/themes/scroller/style-custom.css
+++ b/wp-content/themes/scroller/style-custom.css
@@ -39,10 +39,10 @@
 /*NAVIGATION*/
 .inversorsContent
 {     
-	margin: 25px auto;
-    	overflow: hidden;
-   	width: 100%;
-	min-height:100px;
+	margin: 0 auto;
+    overflow: hidden;
+    padding-top: 45px;
+    width: 100%;
 }
 
 .inversorsContent li 
@@ -471,9 +471,11 @@ font-size: 1.9em;
 
 #Inicio {
     padding-bottom: 0;
-	max-height: 748px;
-	margin-top: 60px;
+	margin-top: 70px;
 }
+
+#Inicio .container {padding-bottom:0;}
+
 
 #Información {padding-top:0;}
 
@@ -519,6 +521,26 @@ font-size: 1.9em;
 .section{padding: 0;}
 
 
+#seguimiento .loop li:nth-child(3)
+{
+ 	float: none;
+    margin: 0 auto;
+} 
+
+#seguimiento .loop li:nth-child(1)
+{
+	margin-left:30px;
+}
+
+
+#multimediaContent {margin-left:10%}
+
+#multimediaContent .blockContent:nth-child(4)
+{
+	margin-left: 238px;
+}
+
+
 }
 
 /*Pantallas cuya resolucion es mayor y el tamaño es 1024px*/
@@ -553,13 +575,51 @@ font-size: 1.9em;
 }
 
 
+@media only screen and (max-width: 850px) {
+	
+
+#multimediaContent {margin-left:5%}
+
+
+
+}
+
+
+@media only screen and (max-width: 790px) {
+	
+#multimediaContent {margin-left:0}
+
+}
+
+@media only screen and (max-width: 755px) {
+	
+#multimediaContent .blockContent:nth-child(4)
+{
+	margin-left: 0;
+}
+
+#multimediaContent {
+    margin: 0 auto;
+    overflow: hidden;
+    width: 470px;
+}
+
+#seguimiento .loop li:nth-child(1) {
+    margin-left: 0;
+}
+
+}
+
+
+
 @media only screen and (max-width: 700px) {
-	
-	
-	#inlineBlocks div
- { 
+
+#inlineBlocks div
+{ 
 	float: none;
     margin:20px auto !important;
+}
+
 }
 
 @media only screen and (max-width: 600px){
