--- a/wp-content/themes/scroller/style.css
+++ b/wp-content/themes/scroller/style.css
@@ -391,7 +391,7 @@ background-image: url(images/icons/minus.png);
 
 .section_template{ background-color:#333;}
 
-.section .container{ overflow:hidden; padding:30px 4% 30px 4%; max-width:942px}
+.section .container{ overflow:hidden; padding:30px 0; max-width:942px}
 
 .section_template .container{ overflow:hidden; padding:155px 2% 75px 2%;}
 
