--- a/wp-content/themes/scroller/style-custom.css
+++ b/wp-content/themes/scroller/style-custom.css
@@ -36,6 +36,9 @@
 .container_block{padding-top:120px !important; margin-bottom:40px !important;}
 
 
+
+
+
 /*NAVIGATION*/
 .inversorsContent
 {     
@@ -230,7 +233,7 @@ a[href$="http://wowslider.com"]
 .oneBox .imgwrap {left:0;}
 .oneBox .item_blog { padding-left: 0;}
 .imgwrap {max-width:100% !important; margin:0 !important; }
-#seguimiento .imgwrap {margin-left: -10px !important; margin-right: 10px !important;}
+#seguimiento .imgwrap {margin-left: -10px !important; margin-right: 10px !important; width:150px}
 
 .item_blog { padding-left: 10px;}
 li.staff img{ margin:0 auto 25px auto; float:none; display:block; width:100% !important;}
@@ -291,7 +294,6 @@ border: 1px solid #810853 !important;
     border: 1px solid #5C5C5C;
     box-shadow: 0 0 2px #5C5C5C;
     float: left;
-    margin: 4px;
     padding: 2px;
 }
 
@@ -473,16 +475,22 @@ font-size: 1.9em;
 #inlineBlocks div
  { 
 	float: left;
-    width: 187px;
+    width: 300px;
 }
 
 #inlineBlocks img {
     height: 200px;
+    width: 300px;
 }
 
-#inlineBlocks {max-width: 615px;}
+#inlineBlocks {max-width: 1024px;}
 
-#inlineBlocks #middle {margin:0 20px;}
+#inlineBlocks #middle {margin:0 10px;}
+
+
+#fasesContent .container, #seguimiento .container, #gallery .container {
+    max-width: 935px;
+}
 
 .container .head {text-align:left !important;}
 
@@ -507,6 +515,7 @@ font-size: 1.9em;
 #multimediaContent .blockContent:nth-child(4)
 {
 	margin-left: 238px;
+	margin-top:10px;
 }
 
 #Inicio
@@ -525,6 +534,11 @@ font-size: 1.9em;
 
 #nav li a { font-size: 12px !important}
 
+#multimediaContent .blockContent{
+    margin-left: 6px;
+
+}
+
 }
 
 /*Pantallas cuya resolucion es mayor y el tamaño es 1024px*/
@@ -537,26 +551,41 @@ font-size: 1.9em;
 #inlineBlocks div
  { 
 	float: left;
-    width: 200px;
+    width: 300px;
 }
 
 #inlineBlocks img {
-    height: 195px;
-    width: 200px;
+    height: 200px;
+    width: 300px;
 }
 
 #inlineBlocks {max-width: 1024px;}
 
-#inlineBlocks #middle {margin:0 205px;}
+#inlineBlocks #middle {margin:0 5.4%;}
 
 .sixcol {
-	width:32.4%;
+	width: 32.55%;
 }
 
 .section{padding: 35px 0;}
 
 #contact, #contact #container {height:235px;}
 
+
+#multimediaContent .blockContent{
+    margin-left: 2.9%;
+
+}
+
+}
+
+
+@media only screen and (max-width:935px)
+{
+	#inlineBlocks div {
+    float: none;
+    margin: 20px auto !important;
+}
 }
 
 
