Ocultacion redes sociales

--- a/wp-content/themes/scroller/style-custom.css
+++ b/wp-content/themes/scroller/style-custom.css
@@ -502,6 +502,11 @@ font-size: 1.9em;
 #gallery{
 	background: radial-gradient(ellipse farthest-corner at center center , rgba(237, 217, 213, 0.55) 30%, rgba(255, 255, 255, 0) 100%) repeat scroll 50% -69px rgba(255, 255, 255, 0);
 }
+
+.tmnf-sc-twitter
+{
+ display:none;
+}
 /*------------------------------------------------------------*/
 /*------------------------------------------------------------*/
 /*------------------------------------------------------------*/
